Begin modernizing project